<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E5EF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="Regístrate"
        android:textColor="#2B406B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lbl_registrate" />

    <TextView
        android:id="@+id/gratis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Es gratis (y lo seguirá siendo)."
        android:textColor="#1D2F59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate"
        tools:text="@string/lbl_gratis" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:drawableLeft="@drawable/nombre1"
        android:text="Nombre:"
        android:textColor="#1D2F59"
        app:layout_constraintEnd_toStartOf="@+id/nombre_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratis"
        tools:text="@string/lbl_nombre" />

    <EditText
        android:id="@+id/nombre_txt"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratis"
        tools:text="@string/txt_nombre" />

    <TextView
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:text="Apellidos:"
        android:textColor="#1D2F59"
        app:layout_constraintEnd_toStartOf="@+id/apellidos_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        tools:text="@string/lbl_Apellido" />

    <EditText
        android:id="@+id/apellidos_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_txt"
        tools:text="@string/lbl_apellido" />

    <TextView
        android:id="@+id/direccion"
        android:layout_width="136dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/direccion"
        android:text="Tu dirección de correo electrónico:"
        android:textColor="#1D2F59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido"
        tools:text="@string/lbl_direccion" />

    <EditText
        android:id="@+id/correo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidos_txt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="111dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/contrase_a"
        android:text="Contraseña Nueva:"
        android:textColor="#1D2F59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion"
        tools:text="@string/lbl_contraseña" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_txt" />

    <TextView
        android:id="@+id/sexo_lbl"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/sexo"
        android:text="Sexo:"
        android:textColor="#1D2F59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/lbl_Sexo" />

    <EditText
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:text="@string/txt_sexo" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/f_nacimiento_1"
        android:text="Fecha de Nacimiento:"
        android:textColor="#1D2F59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo_lbl"
        tools:text="@string/lbl_fnac" />

    <EditText
        android:id="@+id/dia"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/porque_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mes"
        android:layout_width="82dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo"
        tools:text="@string/txt_mes" />

    <EditText
        android:id="@+id/ano_txt"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/porque_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/txt_ano" />

    <TextView
        android:id="@+id/porque_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_porque"
        android:textColor="#1D2F59"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mes" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/verde"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/porque_lbl"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/btn_registro" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="127dp"
        android:background="#5885E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo_fb"
        android:layout_width="74dp"
        android:layout_height="77dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icons8_facebook__1_" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="332dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/faceook" />

</androidx.constraintlayout.widget.ConstraintLayout>